added the landing page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,49 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Welcome to Fovero</title>
+        <link rel="stylesheet" href="./style1.css">
     </head>
     <body>
+        <main>
+            <div class="container">
+                <div class="intro">Welcome to the Fovero Experience!</div>
+                <div class="info">
+                    <div class="further-info">
+                        <h2 class="intro2">Get ready to engage with the most intruiging tech materials on the internet!</h2>
+                        <p class="note">From the most understable start-up blogs and articles, to free 
+                        professional tips on Digital Marketing and Social Media Management, to everything related to organically structured contents and products. Always wanted a website too yeah?! The most amazing prices here at Fovero.
+                        Trainings and Internships are also not left behind. The idea is to create the opportunity for our associates to grow with us and groom ourselves to be great entities to make the world a better place.</p>
+                        <h2 class="intro2 intro3"> What are you waiting for?! Hop on!</h2>
+                    </div>
+
+                    <div class="signIn">
+                        <form action="./thanks.html" method="POST">
+                            <h2 class="intro2">Sign In</h2>
+                            <div class="block">
+                                <label for="email"><strong>Email Address:</strong></label>
+                                <input type="email" placeholder="Enter your email: " id="email" required>
+                            </div>
+                            <div class="block">
+                                <label for="pw1"><strong>Password:</strong></label>
+                                <input type="password" placeholder="Enter your password: " id="pw1" required>
+                            </div>
+                            <div class="checkbox">
+                                <label for="signed"> <input type="checkbox" name="signed" id="signed"> Keep me signed in </label>
+                            </div>
+                            <div>
+                                <button type="submit">Sign In</button>
+                            </div>
+                            <div class="signup">Don't have an account? <a href="./signup.html"> Sign Up here. </a></div>
+                            <div class="forgot"><a href="#">Forgot your password?</a></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer>
+            &copy; Farhan 2020.
+        </footer>
         
     </body>
 </html>
