--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
                             <span class="note"><span class="require">#</span>Passwords must match</span>
                         </div>
                         <div class="checkbox">
-                            <label for="nterest">Select your major interest(s) with us: </label>
+                            <label for="interest">Select your major interest(s) with us: </label>
                             <label for="web"> <input type="checkbox" name="web" id="web"> Web Development </label>
                             <label for="d-mark"> <input type="checkbox" name="digital" id="d-mark"> Digital Marketing </label>
                             <label for="graphics"> <input type="checkbox" name="graphics" id="graphics"> Graphics Design </label>
