--- a/thanks.html
+++ b/thanks.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <main>
+            <div class="container">
             <h1 class="head"> Thank You! </h1>
             <div class="contain">
                 <div class="details">
@@ -14,7 +15,8 @@
                     personal space to allow for the best experience. Kindly check your mail for futher information. More so, check back on this space in a few. 
                     <br>Arigato! :)
                 </div>
-                <a class="surfOn" href="https://foverotechnologies.com">Continue the great experience...</a>
+                <a class="surfOn" href="https://foverotechnologies.com">Continue the Fovero experience...</a>
+            </div>
             </div>
         </main>
     </body>
