touched on responsiveness and added folders

--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Welcome to Fovero</title>
-        <link rel="stylesheet" href="./style1.css">
+        <link rel="stylesheet" href="../css/style1.css">
     </head>
     <body>
         <main>
@@ -18,7 +18,7 @@
                     </div>
 
                     <div class="signIn">
-                        <form action="./thanks.html" method="POST">
+                        <form action="thanks.html" method="POST">
                             <h2 class="intro2">Sign In</h2>
                             <div class="block">
                                 <label for="email"><strong>Email Address:</strong></label>
@@ -34,7 +34,7 @@
                             <div>
                                 <button type="submit">Sign In</button>
                             </div>
-                            <div class="signup">Don't have an account? <a href="./signup.html"> Sign Up here. </a></div>
+                            <div class="signup">Don't have an account? <a href="signup.html"> Sign Up here. </a></div>
                             <div class="forgot"><a href="#">Forgot your password?</a></div>
                         </form>
                     </div>
