--- a/html/signup.html
+++ b/html/signup.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <title>Join Us!</title>
-        <link href="./style2.css" rel="stylesheet">
+        <link href="../css/style2.css" rel="stylesheet">
     </head>
     <body>
         <main>
             <div class="container">
                 <div class="head">Sign Up</div>
                 <div class="subcontainer">
-                    <form action="./index.html" method="POST" onsubmit="return check()">
+                    <form action="index.html" method="POST" onsubmit="return check()">
                         <span class="note"><span class="require">*</span>Required</span>
                         <div class="block">
                             <label for="name">Full Name:<span class="require">*</span></label>
@@ -49,6 +49,6 @@
                 </div>
             </div>
         </main>
-        <script src="script.js"></script>
+        <script src="../scripts/script.js"></script>
     </body>
 </html>
