--- a/html/thanks.html
+++ b/html/thanks.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Thanks for visiting our page!</title>
-        <link href="./style3.css" rel="stylesheet">
+        <link href="../css/style3.css" rel="stylesheet">
     </head>
     <body>
         <main>
