--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
                     </div>
 
                     <div class="signIn">
-                        <form action="thanks.html" method="POST">
+                        <form action="./thanks.html">
                             <h2 class="intro2">Sign In</h2>
                             <div class="block">
                                 <label for="email"><strong>Email Address:</strong></label>
