--- a/html/signup.html
+++ b/html/signup.html
@@ -22,15 +22,15 @@
                         <div class="block">
                             <label for="pw1">Password:<span class="require">*</span></label>
                             <input type="password" placeholder="Enter your password: " id="pw1">
-                            <span class="note"><span class="require">#</span>Password must be at least 6 characters long with at least one of "#" or "$"</span>
+                            <span class="note" style="margin-bottom: 30px;"><span class="require">#</span>Password must be at least 6 characters long with at least one of "#" or "$"</span>
                         </div>
                         <div class="block">
-                            <label for="pw2">Confirm Password:<span class="require">*</span></label>
+                            <label for="pw2" id="note4">Confirm Password:<span class="require">*</span></label>
                             <input type="password" placeholder="Confirm your password: " id="pw2">
                             <span class="note"><span class="require">#</span>Passwords must match</span>
                         </div>
                         <div class="checkbox">
-                            <label for="interest">Select your major interest(s) with us: </label>
+                            <label for="interest" id="note3">Select your major interest(s) with us: </label>
                             <label for="web"> <input type="checkbox" name="web" id="web"> Web Development </label>
                             <label for="d-mark"> <input type="checkbox" name="digital" id="d-mark"> Digital Marketing </label>
                             <label for="graphics"> <input type="checkbox" name="graphics" id="graphics"> Graphics Design </label>
