--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
     <body>
         <main>
             <div class="container">
-                <div class="intro">Welcome to the Fovero Experience!</div>
+                <h1 class="intro">Welcome to the Fovero Experience!</h1>
                 <div class="info">
                     <div class="further-info">
                         <h2 class="intro2">Get ready to engage with the most intruiging tech materials on the internet!</h2>
