Touched my form

--- a/html/signup.html
+++ b/html/signup.html
@@ -9,7 +9,7 @@
             <div class="container">
                 <div class="head">Sign Up</div>
                 <div class="subcontainer">
-                    <form action="index.html" method="POST" onsubmit="return check()">
+                    <form action="index.html" onsubmit="return check()">
                         <span class="note"><span class="require">*</span>Required</span>
                         <div class="block">
                             <label for="name">Full Name:<span class="require">*</span></label>
